cmake_minimum_required(VERSION 2.8)
project(CV)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_FLAGS "-g -Wall -std=c++11")
add_executable(color_balance ColorBalance.cpp)
add_executable(equal_histogram EqualHistogram.cpp Histogram.cpp)
add_executable(filter Filter.cpp)
target_link_libraries(color_balance ${OpenCV_LIBS})
target_link_libraries(equal_histogram ${OpenCV_LIBS})
target_link_libraries(filter ${OpenCV_LIBS})
set_target_properties(filter PROPERTIES COMPILE_FLAGS "-DFILTER_MAIN")
