cmake_minimum_required(VERSION 2.8)
project(CV)
find_package(OpenCV REQUIRED)
#set(CMAKE_CXX_FLAGS "-g -Wall -std=c++11 -Wno-unused-function")
set(CMAKE_CXX_FLAGS "-O3 -Wall -std=c++11 -Wno-unused-function")
add_executable(color_balance ColorBalance.cpp)
add_executable(equal_histogram EqualHistogram.cpp Histogram.cpp)
add_executable(filter Filter.cpp)
add_executable(interest InterestPoints.cpp Filter.cpp)
add_executable(tests Tests.cpp Filter.cpp)
target_link_libraries(color_balance ${OpenCV_LIBS})
target_link_libraries(equal_histogram ${OpenCV_LIBS})
target_link_libraries(filter ${OpenCV_LIBS})
target_link_libraries(interest ${OpenCV_LIBS})
target_link_libraries(tests ${OpenCV_LIBS})
set_target_properties(filter PROPERTIES COMPILE_FLAGS "-DFILTER_MAIN")
set_target_properties(interest PROPERTIES COMPILE_FLAGS "-DINTEREST_MAIN")
